# melody

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  setup.cfg  setup.py  tox.ini  uwsgi.ini
fixtures/mailgun/: clicks.json  delivered.json  dropped.json  hard_bounce.json  opens.json  spam_complaint.json  unsubscribed.json
melody/: __main__.py  wsgi.py
melody/accounts/: authentication.py
melody/accounts/api/: serializers.py  viewsets.py
melody/channels/: routing.py
melody/collector/: collection.py  registration.py
melody/collector/api/: serializers.py  viewsets.py
melody/core/: context_processors.py  decorators.py  middleware.py  models.py  urls.py  views.py
melody/core/templates/core/: base.html
melody/core/urls/: defaults.py  development.py  production.py
melody/mail/: models.py
melody/mail/api/: serializers.py  viewsets.py
melody/posts/: admin.py  api.py  collection.py  collections.py  models.py  renderer.py  urls.py  views.py
melody/posts/api/: serializers.py  viewsets.py
melody/posts/migrations/: 0001_initial.py  0002_auto_20171226_0419.py  0002_auto_20171228_0105.py  0002_auto_20180112_0013.py  0003_auto_20171226_2242.py  0003_auto_20171228_0134.py  0004_auto_20171226_2252.py  0004_auto_20171228_0205.py
melody/posts/templates/posts/: posts_list.html
melody/realtime/: consumers.py  routing.py
melody/rest/: routing.py  urls.py
melody/settings/: compose.py  defaults.py  development.py  production.py
metanic/: __init__.py  __main__.py  command_line.py  wsgi.py
metanic/accounts/: admin.py  authentication.py  models.py
metanic/accounts/api/: serializers.py  viewsets.py
metanic/accounts/migrations/: 0001_initial.py
metanic/collector/: collection.py  registration.py
metanic/collector/api/: serializers.py  viewsets.py
metanic/core/: context_processors.py  decorators.py  middleware.py  models.py  serializers.py
metanic/core/middleware/: __init__.py  authentication.py  cors.py  hsts.py  security_policies.py  sites.py
metanic/core/urls/: defaults.py  development.py  production.py
metanic/features/: managers.py  middleware.py  models.py
metanic/features/api/: serializers.py  viewsets.py
metanic/features/migrations/: 0001_initial.py  0002_auto_20180805_2328.py  0003_auto_20180806_0202.py
metanic/mail/: models.py
metanic/mail/api/: serializers.py  viewsets.py
metanic/mail/migrations/: 0001_initial.py  0002_auto_20180701_1224.py  0002_auto_20180706_2147.py  0002_auto_20180805_2303.py
metanic/multisite/api/: serializers.py  viewsets.py
metanic/posts/: admin.py  collections.py  managers.py  models.py  renderer.py  urls.py
metanic/posts/api/: serializers.py  viewsets.py
metanic/posts/migrations/: 0001_initial.py  0002_auto_20180112_0013.py  0002_auto_20180701_1224.py  0002_auto_20180705_0226.py  0002_auto_20180706_1939.py  0002_auto_20180710_0159.py  0003_auto_20180705_0242.py  0003_auto_20180707_0058.py  0003_post_summary.py  0004_auto_20180805_2303.py
metanic/realtime/: consumers.py  routing.py
metanic/rest/: authentication.py  routing.py  serializers.py  urls.py  views.py  viewsets.py
metanic/settings/: compose.py  defaults.py  development.py  production.py
