[metadata]

description = A bulletin board, yall!
name = melody
url = https://melody.monokro.me

author = Bailey "monokrome" Stoner
author_email = monokrome@monokro.me

maintainer = Bailey "monokrome" Stoner
maintainer_email = monokrome@monokro.me

license = BSD 3-Clause License
long_description = file: README.md, CHANGELOG.md, LICENSE.md
version = 0.1.0

keywords =
    web
    django
    forum

classifiers =
    Framework :: Django
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6


[options]
include_package_data = True
packages = find:
zip_safe = False

setup_requires =
    pytest-runner

install_requires =
    channels
    django
    django-debug-toolbar
    django-livereload

tests_require =
    pytest
    pytest-cov


[options.package_data]
* = *.md, *.html
