[metadata]

name = metanic
description = A bulletin board, yall!
url = https://metanic.org

author = Bailey "monokrome" Stoner
author_email = monokrome@monokro.me

maintainer = Bailey "monokrome" Stoner
maintainer_email = monokrome@monokro.me

license = BSD 3-Clause License
long_description = file: README.md, CHANGELOG.md, LICENSE.md
version = 0.1.0

keywords =
  web
  django
  forum

classifiers =
  Framework :: Django
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6


[options]

include_package_data = True
packages = find:
zip_safe = False

install_requires =
  bbcode
  channels
  dj_database_url
  django-anymail
  django-debug-toolbar
  django-extensions
  django-filter
  django-livereload
  django-redis-cache
  django
  djangorestframework
  djangorestframework-jwt
  ipython
  markdown
  psycopg2-binary
  python-memcached
  raven
  uwsgi
  werkzeug
  zope.interface

tests_require =
  pytest
  pytest-cov
  yapf


[options.package_data]

* = *.md, *.html
