[metadata]

name = metanic
description = A bulletin board, yall!
url = https://metanic.org

author = Bailey "monokrome" Stoner
author_email = monokrome@monokro.me

maintainer = Bailey "monokrome" Stoner
maintainer_email = monokrome@monokro.me

license = BSD 3-Clause License
long_description = file: README.md, CHANGELOG.md, LICENSE.md
version = 0.1.0

keywords =
  web
  django
  forum

classifiers =
  Framework :: Django
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6


[options]

include_package_data = True
packages = find:
zip_safe = False

install_requires =
  bbcode
  channels
  dj_database_url
  django-anymail
  django-filter
  django-redis-cache
  django
  djangorestframework
  djangorestframework-jwt
  markdown
  python-memcached
  raven
  werkzeug
  zope.interface

tests_require =
  ipython
  django-debug-toolbar
  django-extensions
  pytest
  pytest-cov
  yapf


[options.package_data]

* = *.md, *.html

[yapf]
based_on_style=pep8
allow_multiline_lambdas=False
allow_multiline_dictionary_keys=False
blank_line_before_nested_class_or_def=False
column_limit=79
coalesce_brackets=False
continuation_indent_width=4
dedent_closing_brackets=True
each_dict_entry_on_separate_line=True
indent_dictionary_value=True
join_multiple_lines=False
indent_width=4
spaces_around_power_operator=True
spaces_around_default_or_named_assign=False
spaces_before_comment=2
space_between_ending_comma_and_closing_bracket=False
split_arguments_when_comma_terminated=False
split_before_bitwise_operator=True
split_before_dict_set_generator=True
split_before_first_argument=True
split_before_logical_operator=True
split_before_named_assigns=True
use_tabs=False
